// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar component should render correctly with props 1`] = `
<DocumentFragment>
  <div
    class="navbar NavBar__test"
    style="position: fixed;"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`NavBar component should render correctly without props 1`] = `
<DocumentFragment>
  <div
    class="navbar "
  >
    test
  </div>
</DocumentFragment>
`;
